--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,7 +20,7 @@
             "sequence": [
                 "workbench.action.files.saveAll",
                 // "workbench.action.terminal.focus",
-                {"command": "workbench.action.terminal.sendSequence","args": {"text": "\u000Dclear ; make test \u000D"}}
+                {"command": "workbench.action.terminal.sendSequence","args": {"text": "\u000Dclear ; make docs \u000D"}}
             ],
         },
     ],
